--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   "homepage": "https://github.com/gillmourtunhira/famba-spa#readme",
   "devDependencies": {
     "@snowpack/plugin-svelte": "^3.6.0",
-    "snowpack": "^3.1.2"
+    "node-sass": "^6.0.0",
+    "snowpack": "^3.1.2",
+    "svelte-preprocess": "^4.7.3",
+    "svelte-preprocess-sass": "^1.0.0"
   },
   "dependencies": {
+    "@snowpack/plugin-sass": "^1.4.0",
     "svelte": "^3.36.0"
   }
 }
